Fix Safari font weight; Added covers

--- a/styles/04-base/headings.scss
+++ b/styles/04-base/headings.scss
@@ -3,6 +3,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.13;
   // color: var(--color-carbon-900);
   font-family: var(--font-stack-semibold);
+  font-weight: normal;
 }
 
 h1 {
